<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LogInActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/AppIcon"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@mipmap/new_round"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/WelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppIcon"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/student_log_in_portal"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/WelcomeMessage"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/EmailEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="Autofill,LabelFor,TextFields"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/skyblue"
            android:text="@string/email"
            android:background="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/EmailInput">

        <EditText
            android:id="@+id/PassEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/skyblue"
            android:text="@string/password"
            android:background="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/PasswordInput"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:id="@+id/show">

        <Button
            android:id="@+id/ShowPass"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/skyblue"
            android:onClick="ShowPass"
            android:text="@string/show_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="15sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


        <Button
            android:id="@+id/LogInButton"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:backgroundTint="@color/skyblue"
            android:onClick="LogIn"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>