<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptiveAssessmentActivity"
    android:background="@color/black">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FF00FF"
        android:id="@+id/topbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/assessing" />

    </Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/topbar"
        android:id="@+id/question"
        android:layout_margin="10sp"
        android:background="@drawable/border1"
        android:textSize="17sp"
        android:layout_height="200sp"
        android:textColor="@color/white"
        android:padding="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_below="@id/question"
        android:layout_margin="10sp"
        android:background="@drawable/faculty_text_back"
        android:textSize="17sp"
        android:id="@+id/answer"
        android:textColor="@color/white"
        android:padding="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fremarks"
        android:textSize="17sp"
        android:id="@+id/remark"
        android:textColor="@color/white"
        android:text="@string/remarks"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_above="@id/marklayout"
        android:background="@drawable/faculty_text_back"
        android:layout_margin="10sp"
        android:textSize="17sp"
        android:id="@+id/fremarks"
        android:textColor="@color/white"
        android:padding="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navigation"
        android:id="@+id/marklayout">


        <TextView
            android:id="@+id/maxmarks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border1"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:padding="25sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border1"
            android:id="@+id/marksgiven"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:padding="25sp"/>

    </LinearLayout>


    <Toolbar
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:background="#FF00FF"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        android:paddingStart="40sp"
        android:paddingEnd="40sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/prev"
                android:textSize="17sp"
                android:text="@string/prev"
                android:backgroundTint="#722f37"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/next"
                android:textSize="17sp"
                android:text="@string/next"
                android:backgroundTint="#722f37"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/prev"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/submit"
                android:textSize="15sp"
                android:text="@string/submit"
                android:backgroundTint="#722f37"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </Toolbar>

</RelativeLayout>